Title of keys is now 'Name', not 'Key'.

--- a/app/views/characters/show.html.erb
+++ b/app/views/characters/show.html.erb
@@ -9,7 +9,7 @@
       <table class='table'>
         <tr>
           <th>
-            Key
+            Name
           </th>
           <th>
             Description
