--- a/app/views/characters/index.html.erb
+++ b/app/views/characters/index.html.erb
@@ -8,6 +8,9 @@
       <% @characters.each do |character| %>
       <li class='list-group-item'>
         <%= link_to character.name, character_path(character.name) %>
+        <small>
+          of <%= character.race %>
+        </small>
       </li>
       <% end %>
     </ul>
