--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,6 +42,16 @@
               <% end %>
             </ul>
           </li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Planets <span class="caret"></span></a>
+            <ul class="dropdown-menu" role="menu">
+              <% @planets.each do |planet| %>
+                <li>
+                  <%= link_to planet.name, planet_path(planet.name) %>
+                </li>
+              <% end %>
+            </ul>
+          </li>
         </ul>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
