Add 'Luck' to characters

--- a/app/views/characters/show.html.erb
+++ b/app/views/characters/show.html.erb
@@ -1,5 +1,8 @@
 <div class="page-header">
   <h1><%= @character.name %> <small>of <%= @character.race %></small></h1>
+  <div class="luck">
+    <h3>Luck: <%= @character.luck %></h3>
+  </div>
 </div>
 
 <!-- Keys -->
