Display character and planet name in title

--- a/app/views/characters/show.html.erb
+++ b/app/views/characters/show.html.erb
@@ -1,4 +1,5 @@
 <div class="page-header">
+  <title><%= @character.name %></title>
   <h1><%= @character.name %> <small>of <%= @character.race %></small></h1>
   <div class="luck">
     <h3>Luck: <%= @character.luck %></h3>
