--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -58,7 +58,7 @@
 
     <%= yield %>
 
-    <footer class="footer">
+    <footer class="footer panel panel-default">
       <title>Voidfeather</title>
       <div class="container">
         <center>
